Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.9.4-dev
-----------------

Not yet released.

- #135: added support for hybrid properties.

Version 0.9.3
-------------

Released on February 4, 2013.

- Fixes incompatibility with Python 2.5 try/except syntax.
- #116: handle requests which raise :exc:`~sqlalchemy.exc.IntegrityError`.

Version 0.9.2
-------------

Released on February 4, 2013.

- #82, #134, #136: added request pre- and postprocessors.
- #120: adds support for JSON-P callbacks in :http:method:`get` requests.

Version 0.9.1
-------------

Released on January 17, 2013.

- #126: fix documentation build failure due to bug in a dependency.
- #127: added "ilike" query operator.

Version 0.9.0
-------------

Released on January 16, 2013.

- Fixed issue #123: :http:method:`patch` requests to instances which do not
  exist result in a :http:statuscode:`404` response.
- Removed ability to provide a :class:`~sqlalchemy.orm.session.Session` class
  when initializing :class:`APIManager`; provide an instance of the class
  instead.
- Changes some dynamically loaded relationships used for testing and in
  examples to be many-to-one instead of the incorrect one-to-many. Versions of
  SQLAlchemy after 0.8.0b2 raise an exception when the latter is used.
- Fixed issue #117: allow adding related instances on :http:method:`patch`
  requests for one-to-one relationships.
- Fixed issue #114: fix bug where string representations of integers were
  converted to integers.
- Fixed issue #110: enable ``results_per_page`` query parameter for clients,
  and added ``max_results_per_page`` keyword argument to
  :meth:`APIManager.create_api`.
- Fixed issue #109: use `sphinxcontrib-issuetracker`_ to render links to GitHub
  issues in documentation.