@@ -878,7 +878,10 @@ class API(ModelView):
         result = {}
         for fieldname, value in dictionary.iteritems():
             if _is_date_field(self.model, fieldname) and value is not None:
-                result[fieldname] = parse_datetime(value)
+                if value.strip() == '':
+                    result[fieldname] = None
+                else:
+                    result[fieldname] = parse_datetime(value)
             else:
                 result[fieldname] = value
         return result
