@@ -13,6 +13,7 @@ Version 0.9.4-dev
 
 Not yet released.
 
+- #113: interpret empty strings for date fields as ``None`` objects.
 - #135: added support for hybrid properties.
 
 Version 0.9.3
